--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,9 +1,8 @@
 <h2>My Heroes</h2>
-<ul class="heroes">
-  <li *ngFor="let hero of heroes" (click)="onSelectHero(hero)"
-    [class.selected]="selectedHero === hero">
+<div class="heroes">
+  <a *ngFor="let hero of heroes" routerLink="/detail/{{hero.id}}">
     <span class="badge">{{hero.id}}</span>{{hero.name}}
-  </li>
-</ul>
+  </a>
+</div>
 
-<app-hero-detail [hero]="selectedHero"></app-hero-detail>
+<!-- <app-hero-detail [hero]="selectedHero"></app-hero-detail> -->
