--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -1,9 +1,10 @@
 <div *ngIf="hero">
-    <h2>{{hero.name | uppercase}} Details</h2>
-    <div><span>id: </span>{{hero.id}}</div>
-    <div>
-      <label for="">name:
-        <input type="text" [(ngModel)]='hero.name' placeholder="name">
-      </label>
-    </div>
+  <h2>{{hero.name | uppercase}} Details</h2>
+  <div><span>id: </span>{{hero.id}}</div>
+  <div>
+    <label for="">name:
+      <input type="text" [(ngModel)]='hero.name' placeholder="name">
+    </label>
   </div>
+  <button (click)="goBack()">Go Back</button>
+</div>
