--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,8 +1,10 @@
 <h2>My Heroes</h2>
-<div class="heroes">
-  <a *ngFor="let hero of heroes" routerLink="/detail/{{hero.id}}">
-    <span class="badge">{{hero.id}}</span>{{hero.name}}
-  </a>
-</div>
+<ul class="heroes">
+  <li *ngFor="let hero of heroes">
+    <a  routerLink="/detail/{{hero.id}}">
+      <span class="badge">{{hero.id}}</span>{{hero.name}}
+    </a>
+  </li>
+</ul>
 
 <!-- <app-hero-detail [hero]="selectedHero"></app-hero-detail> -->
